# tr-agents

./: .env.example  .gitignore  Dockerfile.branch-monitor  README.md  config.yaml  pyproject.toml
agents/branch_monitor/: __init__.py  agent.json  agent.py  server.py
agents/branch_monitor/skills/branch-network-monitor/: SKILL.md
agents/branch_monitor/skills/branch-network-monitor/evals/: evals.json
agents/branch_monitor/skills/branch-network-monitor/references/: escalation-matrix.md  known-failure-modes.md  threat-assessment.md
agents/branch_monitor/skills/branch-network-monitor/scripts/: correlate_threats.py
agents/f5_provisioning/: agent.json  agent.py
agents/f5_provisioning/skills/f5-dns-validator/: SKILL.md
docs/: ARCHITECTURE.md
mcp-servers/: README.md  f5-mcp-server.yaml  infoblox-mcp-server.yaml  network-monitoring-mcp-server.yaml  power-outage-mcp-server.yaml  servicenow-mcp-server.yaml  weather-mcp-server.yaml
mock-backends/: app.py
shared/: branch_monitor_tools.py  f5_tools.py  model_config.py  orchestrator_tools.py
tests/: test_branch_monitor.py  test_f5_provisioning.py
workflow-executor/: Dockerfile  app.py
workflows/: BUILD_WORKFLOWS.md  branch-outage-response.sw.yaml  build-workflow.sh  f5-vip-provisioning.sw.yaml
workflows/branch-outage-response/: .dockerignore  pom.xml
workflows/deploy/: 01-configmaps-branch-outage.yaml  02-sonataflow-branch-outage.yaml  03-configmaps-f5-provisioning.yaml  04-sonataflow-f5-provisioning.yaml
workflows/f5-vip-provisioning/: Dockerfile  pom.xml
(+14 files in other folders)
